--- a/MyAndroid/res/values/strings.xml
+++ b/MyAndroid/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">MyAndroid</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="bt1">活动广场</string>
+    <string name="register">活动广场</string>
     <string name="bt2">社团风采</string>
     <string name="bt3">个人中心</string>
 
